--- a/src/style/_pagesmenu.scss
+++ b/src/style/_pagesmenu.scss
@@ -3,7 +3,7 @@
     position: sticky;
     top: 0;
     transition: top .3s;
-    z-index: 99;
+    z-index: 90;
     background: rgba(255, 255, 255, 0.75);
     backdrop-filter: blur(.25rem);
 
